testing/errors/expressionnotnumber1.a
	*=$1000
	!fill 3, [0]	; -> "Expression did not return a number."
